# arc-zmq-server

./: 00vars.sh  10build_all.sh  11downloads.sh  12build_libs.sh  13build_apps.sh  20clean_all.sh  LICENSE  README.adoc  conf_schema.json
libs/archives/: 00wget.sh
prx0ws_cpp/: CMakeLists.txt  prx0ws.c.bak  prx0ws.cc
pytest/: pub0.py  sub0.py
relay_bin/: execute_atob.sh  execute_btoa.sh  install_nginx.sh  kill_nginx.sh  nginx.conf  prx0ws.bookworm.x86_64  prx0ws.focal.x86_64  prx0ws.jammy.x86_64  prx0ws.noble.x86_64  start_nginx.sh
sideAB_cpp/: CMakeLists.txt  conf.h  conf.yml  dump.py  handshake.h  sample_data.h  sideA.cpp  sideB.cpp  validate_conf.py
